that'll do, dev. that'll do.

--- a/ResilientAPI/Properties/launchSettings.json
+++ b/ResilientAPI/Properties/launchSettings.json
@@ -22,8 +22,7 @@
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "BASE_URL": "http://localhost:1999"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "Docker": {
