--- a/ResilientAPI/ResilientAPI.csproj
+++ b/ResilientAPI/ResilientAPI.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>.</DockerfileContext> 
+    <DockerfileRunArguments>-m 250m --cpus=".2"</DockerfileRunArguments>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +19,7 @@
     <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     <PackageReference Include="prometheus-net.AspNetCore" Version="3.5.0" />
   </ItemGroup>
+
 
 
 </Project>
